--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <canvas id="canvas" style="width:100%;height:100%"></canvas>
     <script src="engine.js"></script>
     <script src="player.js"></script>
+    <script src="bunny.js"></script>
     <script src="world.js"></script>
   </body>
 </html>
