--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 
   <body style="height:100%;width:100%;margin:0px;overflow:hidden;">
     <canvas id="canvas" style="width:100%;height:100%"></canvas>
+    <script src="quadTree.js"></script>
+    <script src="images.js"></script>
     <script src="engine.js"></script>
     <script src="player.js"></script>
     <script src="bunny.js"></script>
